changed logo. changed colours and fonts. fixed grids & flexboxes.fixed nav bar. added media queries.

--- a/code/index.html
+++ b/code/index.html
@@ -3,52 +3,94 @@
   <head>
     <meta charset="utf-8" />
     <title>Project 2: The News Site</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <header class="header">
-      <!-- Some kind of logo and navbar -->
       <img class="logo" 
-      src="./logo.svg" 
+      src="./Becky-Bakes-logo.png" 
       alt="Technigo">
+      <h1>Becky Bakes</h1>
       <nav class="navigation">
-        <a href="#">Big news  </a>
-        <a href="#">Small news  </a>
-        <!-- change navbar -->
+        <a href="#">Main story  </a>
+        <a href="#">Other news  </a>
+        <a href="#">Contact us  </a>
       </nav>
     </header>
-    <section class="big-container">
+    
+    <section class="main-container">
       <section class="big-news">
-      <!-- The big news content -->
         <div>
-        <img class="sushi" src="./Sushi.jpg" alt="Picture of sushi"> 
-        <h2>New trend on the rise: Sushi meets Swedish Fika</h2>
+        <img class="sushi" src="./Sushi.jpg" alt="Picture of sushi"> </div>
+        <div class="text-big-news"><p> <h2>New trend on the rise: Sushi meets Swedish Fika</h2>
         <h3>- Inventor calls it Fishi</h3>
-          <p class="text">Lemon drops macaroon oat cake sugar plum shortbread caramels candy candy marshmallow. Pudding cake carrot cake bonbon jujubes. Liquorice carrot cake tiramisu cotton candy oat cake jelly beans jelly. Powder chocolate tiramisu topping cookie sweet roll liquorice soufflé marzipan. Caramels carrot cake candy sweet marshmallow. Carrot cake cotton candy icing sugar plum candy canes cake gingerbread croissant gummi bears. Sugar plum fruitcake cake sugar plum cake jelly-o sweet roll marshmallow sweet. Lemon drops dessert cheesecake biscuit croissant. Toffee ice cream sugar plum jelly halvah gingerbread topping.
-          </p>
-        </div>
+        Cupcake ipsum dolor sit amet candy. Tootsie roll candy chupa chups ice cream toffee biscuit chupa chups jelly beans. Donut jujubes cupcake cheesecake oat cake tootsie roll candy candy canes apple pie. Pudding biscuit lemon drops oat cake shortbread shortbread gummi bears icing. Danish toffee gingerbread topping dragée cheesecake dessert cake. Cotton candy gingerbread oat cake dragée jelly beans. Tootsie roll carrot cake dragée brownie dessert cotton candy. Tootsie roll fruitcake dessert apple pie sugar plum caramels lemon drops fruitcake. Topping macaroon danish cookie halvah caramels chocolate cake. Tart bear claw gummi bears jelly beans fruitcake. Gummi bears sweet roll marzipan carrot cake marzipan. Tootsie roll candy cotton candy dragée gingerbread.
+        </p>
+      </div>
       </section>
 
+      <hr>
     <section class="other-news">
-
-      <!-- The other news  -->
-      <div class="box first">
+      <div class="small-news">
         <img class="image-other" src="./biscuit-basket.jpg" alt="Biscuit in a basket">
+        <div class="text-other-news">
+        <h3>Kex/tjex argument continues in Swedish parlament</h3>
         <p> Cupcake ipsum dolor sit amet candy liquorice marzipan. Muffin carrot cake dragée donut powder dessert biscuit. Pudding chocolate cheesecake jelly halvah marzipan chupa chups topping croissant. Dragée cookie jujubes jujubes topping.
-        </p>
-        </div>
-      <div class="box second"> Gummies jelly beans cheesecake marshmallow pie sweet roll bonbon. Jelly gingerbread chocolate lollipop apple pie marshmallow macaroon. Cotton candy marzipan tootsie roll oat cake sweet roll macaroon jelly-o. Jelly tart jelly-o chupa chups biscuit jelly dragée pie.
+        </p></div>
       </div>
-      <div class="box third"> Sugar plum caramels pudding donut chocolate bar tiramisu. Donut pudding bonbon liquorice pie carrot cake cotton candy carrot cake cake. Topping cupcake lemon drops bear claw gummi bears biscuit tart macaroon pie. Croissant cake biscuit lollipop danish cake ice cream tiramisu.
+      <div class="small-news">
+        <img class="image-other" src="./biscuit-box.jpg" alt="Biscuits in a box">
+        <div class="text-other-news">
+        <h3>New version of the Ballerina biscuit in stores next month</h3>
+        <p> Cupcake ipsum dolor sit amet candy liquorice marzipan. Muffin carrot cake dragée donut powder dessert biscuit. Pudding chocolate cheesecake jelly halvah marzipan chupa chups topping croissant. Dragée cookie jujubes jujubes topping.
+        </p></div>
       </div>
-      <div class="box forth">  Sesame snaps jelly-o lemon drops cheesecake fruitcake ice cream bonbon gummies. Carrot cake fruitcake oat cake fruitcake chocolate cake toffee. Carrot cake gummies oat cake pastry pastry.
+      <div class="small-news">
+        <img class="image-other" src="./canoe.jpg" alt="Picture of a woman in a canoe">
+        <div class="text-other-news">
+        <h3>Fika for adventurers; tips on what to bring</h3>
+        <p> Cupcake ipsum dolor sit amet candy liquorice marzipan. Muffin carrot cake dragée donut powder dessert biscuit. Pudding chocolate cheesecake jelly halvah marzipan chupa chups topping croissant. Dragée cookie jujubes jujubes topping.
+        </p></div>
       </div>
-      <div class="box fifth"> Apple pie halvah pastry cheesecake toffee chocolate cake sweet roll. Cake icing jelly marzipan cupcake. Pie lemon drops lollipop halvah biscuit cheesecake jelly-o. Tiramisu gingerbread topping wafer lemon drops carrot cake jelly beans halvah.</div>
-      <div class="box sixth"> Apple pie halvah pastry cheesecake toffee chocolate cake sweet roll. Cake icing jelly marzipan cupcake. Pie lemon drops lollipop halvah biscuit cheesecake jelly-o. Tiramisu gingerbread topping wafer lemon drops carrot cake jelly beans halvah.</div>
-      <div class="box seventh"> Apple pie halvah pastry cheesecake toffee chocolate cake sweet roll. Cake icing jelly marzipan cupcake. Pie lemon drops lollipop halvah biscuit cheesecake jelly-o. Tiramisu gingerbread topping wafer lemon drops carrot cake jelly beans halvah.</div>
-      <div class="box eighth"> Apple pie halvah pastry cheesecake toffee chocolate cake sweet roll. Cake icing jelly marzipan cupcake. Pie lemon drops lollipop halvah biscuit cheesecake jelly-o. Tiramisu gingerbread topping wafer lemon drops carrot cake jelly beans halvah.</div>
+      <div class="small-news">
+        <img class="image-other" src="./child-baking.jpg" alt="Woman and Child in kitchen baking">
+        <div class="text-other-news">
+        <h3>How to get you child interested in baking</h3>
+        <p> Cupcake ipsum dolor sit amet candy liquorice marzipan. Muffin carrot cake dragée donut powder dessert biscuit. Pudding chocolate cheesecake jelly halvah marzipan chupa chups topping croissant. Dragée cookie jujubes jujubes topping.
+        </p></div>
+      </div>
+      <div class="small-news">
+        <img class="image-other" src="./cinnamon-bun.jpg" alt="Cinnamon buns">
+        <div class="text-other-news">
+        <h3>Research indicates that fika could be the solution to world peace</h3>
+        <p> Cupcake ipsum dolor sit amet candy liquorice marzipan. Muffin carrot cake dragée donut powder dessert biscuit. Pudding chocolate cheesecake jelly halvah marzipan chupa chups topping croissant. Dragée cookie jujubes jujubes topping.
+        </p></div>
+      </div>
+      <div class="small-news">
+        <img class="image-other" src="./coffee-cups.jpg" alt="Cups of coffee in a circle">
+        <div class="text-other-news">
+        <h3>What your coffee cup tells us about you</h3>
+        <p> Cupcake ipsum dolor sit amet candy liquorice marzipan. Muffin carrot cake dragée donut powder dessert biscuit. Pudding chocolate cheesecake jelly halvah marzipan chupa chups topping croissant. Dragée cookie jujubes jujubes topping.
+        </p></div>
+      </div>
+      <div class="small-news">
+        <img class="image-other" src="./healthy-biscuit.jpg" alt="Biscuits with fruit on">
+        <div class="text-other-news">
+        <h3>If there's fruit on them, they're healthy!</h3>
+        <p> Cupcake ipsum dolor sit amet candy liquorice marzipan. Muffin carrot cake dragée donut powder dessert biscuit. Pudding chocolate cheesecake jelly halvah marzipan chupa chups topping croissant. Dragée cookie jujubes jujubes topping.
+        </p></div>
+      </div>
+      <div class="small-news">
+        <img class="image-other" src="./Macaron-tower.jpg" alt="Tower of macarons">
+        <div class="text-other-news">
+        <h3>How your choice in wedding fika can make your special day unique</h3>
+        <p> Cupcake ipsum dolor sit amet candy liquorice marzipan. Muffin carrot cake dragée donut powder dessert biscuit. Pudding chocolate cheesecake jelly halvah marzipan chupa chups topping croissant. Dragée cookie jujubes jujubes topping.
+        </p></div>
+      </div>
     </section>
   </section>
   </body>
