--- a/code/index.html
+++ b/code/index.html
@@ -5,12 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
+    <link rel="icon" href="images/logo.png"> 
   </head>
+
   <body>
     <header>
-      <h1>This project is going to be awesome</h1>
-      <!-- Some kind of logo and navbar -->
+      <img src="images/logo.png" alt="Minerva logo">
+      <h1> MINERVA</h1>
+      <nav>
+        <a href="#">LATEST NEWS</a>
+        <a href="#">EXPLORE</a>
+        <a href="#">DO</a>
+        <a href="#">HOME</a>
+      </nav>
+      <div class="hamburger">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
     </header>
 
     <section class="big-news">
