flex grid in gridpart, new images, styling navbar

--- a/code/index.html
+++ b/code/index.html
@@ -12,8 +12,10 @@
     <header class="header">
       <img class="logo" src="pic/logo.svg" alt="logo Technigo">
       <nav>
-        <a href="#">Big news</a>
-        <a href="#">Small news</a>
+        <a href="#">Read more</a>
+        <a href="#">Members</a>
+        <a href="#">Save a tree</a>
+        <a href="#">About us</a>
       </nav>
       <!-- Some kind of logo and navbar -->
     </header>
@@ -32,7 +34,7 @@
      <section class="grid-news">
       <!-- Grids x 6 -->
       <div class=grid-content>
-        <img class="grid-picture" src="./pic/sma-trad.jpg" alt="">
+        <img class="grid-picture" src="pic/grid-river.jpg" alt="">
         <div class="grid-text">
           <h3> This also happened </h3>
           <p>
@@ -41,7 +43,7 @@
        </div>
       </div> 
       <div class=grid-content>
-        <img class="grid-picture" src="./pic/sma-trad.jpg" alt="">
+        <img class="grid-picture" src="pic/grid-stam.jpg" alt="">
         <div class="grid-text">
           <h3> This also happened </h3>
           <p>
@@ -50,7 +52,7 @@
         </div>
       </div>     
       <div class=grid-content>
-        <img class="grid-picture" src="./pic/sma-trad.jpg" alt="">
+        <img class="grid-picture" src="pic/grid-yellow.jpg" alt="">
         <div class="grid-text">
           <h3> This also happend </h3>
           <p>
@@ -59,7 +61,7 @@
        </div>
       </div> 
       <div class=grid-content>
-        <img class="grid-picture" src="./pic/sma-trad.jpg" alt="">
+        <img class="grid-picture" src="pic/grid-root.jpg" alt="">
         <div class="grid-text">
           <h3> This also happened </h3>
           <p>
@@ -68,7 +70,7 @@
         </div>
       </div>      
       <div class=grid-content>
-        <img class="grid-picture" src="./pic/sma-trad.jpg" alt="">
+        <img class="grid-picture" src="pic/grid-orange.jpg" alt="">
         <div class="grid-text">
           <h3> This also happened </h3>
           <p>
@@ -77,7 +79,25 @@
         </div>
       </div>     
       <div class=grid-content>
-        <img class="grid-picture" src="./pic/sma-trad.jpg" alt="">
+        <img class="grid-picture" src="pic/grid-palm.jpg" alt="">
+        <div class="grid-text">
+          <h3> This also happened </h3>
+          <p>
+           Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+          </p>
+       </div>
+      </div> 
+      <div class=grid-content>
+        <img class="grid-picture" src="pic/grid-shubby.jpg" alt="">
+        <div class="grid-text">
+          <h3> This also happened </h3>
+          <p>
+           Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+          </p>
+       </div>
+      </div> 
+      <div class=grid-content>
+        <img class="grid-picture" src="pic/grid-japan.jpg" alt="">
         <div class="grid-text">
           <h3> This also happened </h3>
           <p>
