added the alts for the images

--- a/code/index.html
+++ b/code/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header class="header">
-      <img class="logo" src="images/cat.png" alt=""/>
+      <img class="logo" src="images/cat.png" alt="logo of black cat sitting"/>
         <h1>cat-astrophe</h1>
       <nav class="navigation">
         <a href="#big-news">Big news</a>
@@ -25,7 +25,7 @@
     <!--big news-->
     <div id="big-news"></div>
       <section class="big-news">
-            <img class="big-news-img" src="images/main.jpg" alt="">
+          <img class="big-news-img" src="images/main.jpg" alt="black and white photo of two cats cuddling">
         <div class="intro">
           <h2><strong>It's a cats world</strong></h2>
           <p>“I am what I am. I would tell you what you want to know if I could, for you have been kind to me. But I am a cat, and no cat anywhere ever gave anyone a straight answer.”</p> 
@@ -37,57 +37,57 @@
   <div id="small-news"></div>
     <section class="container">
         <div class="small-news">
-          <img class="small-image" src="images/sitting.jpg" alt="">
-          <h3><strong>Purr-haps = Perhaps</strong></h3>
+          <img class="small-image" src="images/sitting.jpg" alt="black and white photo of cat sitting">
+          <h3><strong>Purr-haps - Perhaps</strong></h3>
           <p><strong><em>adverb</em></strong></p>
           <p>1. Used to express uncertainty or possibility when a cat is around.</p>
           <p>2. “…Did your cat just eat my tuna sandwich? Purr-haps.”</p>
         </div> 
         <div class="small-news">
-          <img class="small-image" src="images/pose.jpg" alt="">
-          <h3><strong>Paw-sibility = Possibility</strong></h3>
+          <img class="small-image" src="images/pose.jpg" alt="black and white photo of cat laying down looking at camera">
+          <h3><strong>Paw-sibility - Possibility</strong></h3>
           <p><strong><em>noun</em></strong>
           <p>1. A thing that may happen or be the case when a cat is around.</p>
           <p>2.“…Did your cat just eat my tuna sandwhich? It’s a paw-sibility.”</p>
         </div> 
         <div class="small-news">
-          <img class="small-image" src="images/eskil.jpg" alt="">
-          <h3><strong>A-paw-ling = Appalling</strong></h3>
+          <img class="small-image" src="images/eskil.jpg" alt="black and white photo of fluffy cat laying down looking at camera">
+          <h3><strong>A-paw-ling - Appalling</strong></h3>
           <p><strong><em>adjective</em></strong></p>
           <p>1. Causing shock or dismay for a cat; horrific.</p>
           <p>2. “The cat smelled a-paw-ling after running around the alleyways all night long.”</p>
         </div> 
         <div class="small-news">
-          <img class="small-image" src="images/sitting2.jpg" alt="">
-          <h3><strong>Claw-ful = Awful</strong></h3>
+          <img class="small-image" src="images/sitting2.jpg" alt="black and white photo from the side of cat sitting">
+          <h3><strong>Claw-ful - Awful</strong></h3>
           <p><strong><em>adjective</em></strong></p>
           <p>1.Very bad or unpleasant; especially when pertaining to litter boxes.</p>
           <p>2.“The litter box smelled claw-ful after not changing it for a while.”</p>
         </div> 
         <div class="small-news">
-          <img class="small-image" src="images/elton.jpg" alt="">
-          <h3><strong>Fur real = For Real</strong></h3>
+          <img class="small-image" src="images/elton.jpg" alt="black and white photo of cat sleeping">
+          <h3><strong>Fur real - For Real</strong></h3>
           <p><strong><em>informal</em></strong></p>
           <p>1. Used to assert that a cat is genuine or is actually the case.</p>
           <p>2.“I’m not playing games with you, mouse – this is fur real!”</p>
         </div> 
         <div class="small-news">
-          <img class="small-image" src="images/teeth.jpg" alt="">
-          <h3><strong>Hiss-terical = Hysterical</strong></h3>
+          <img class="small-image" src="images/teeth.jpg" alt="black and white photo of cat showing its teeth">
+          <h3><strong>Hiss-terical - Hysterical</strong></h3>
           <p><strong><em>adjective</em></strong></p>
           <p>1.Deriving from or affected by a cat with uncontrolled extreme emotion.</p>
           <p>2. “As soon as the cat entered the vet, he became hiss-terical.”</p>
         </div> 
         <div class="small-news">
-          <img class="small-image" src="images/elton1.jpg" alt="">
-          <h3><strong>Meow = Now</strong></h3>
+          <img class="small-image" src="images/elton1.jpg" alt="black and white closeup photo of cats face from the side">
+          <h3><strong>Meow - Now</strong></h3>
           <p><strong><em>adverb</em></strong></p>
           <p>1. At the present time or moment; made popular by the 2001 cult-film classic, Super Troopers.</p>
           <p>2. “Go refill the food bowl – right meow!”</p>
         </div> 
         <div class="small-news">
-          <img class="small-image" src="images/eskil1.jpg" alt="">
-          <h3><strong>Paw-er = Power</strong></h3>
+          <img class="small-image" src="images/eskil1.jpg" alt="black and white photo of kitten sitting up">
+          <h3><strong>Paw-er - Power</strong></h3>
           <p><strong><em>noun</em></strong></p>
           <p>1. The capacity or ability to direct or influence the behavior of other cats.</p>
           <p>2.“The idea that men should have paw-er over cats is absurd. Come feed me, now.”</p>
@@ -98,7 +98,7 @@
 <footer>
   <div class="links">
   <div class="top"><a href=""> 🢁</a></div>
-    <img src="images/celebration.png" alt="">
+    <img src="images/celebration.png" alt="logo of fox who's holding maracas">
       <p><strong>Sofia</strong></p>
       <p>Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></p>
       <p>Stickers made by <a href="https://www.flaticon.com/authors/stickerfolio" title="stickerfolio">stickerfolio</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
