Stacked the navbar-list under each other for mobile and tablet.

--- a/code/index.html
+++ b/code/index.html
@@ -17,11 +17,11 @@
 
   <body>
 
-    <!-- Some kind of logo and navbar -->
+    <!-- Header and navbar -->
     <header>
       <div class="flex-header">
         <div class="navbar-brand-flex">
-          <a class="navbar-brand" href="#">Good News</a>
+          <a class="navbar-brand" href="./index.html">Good News</a>
         </div>
         <nav>
           <ul class="flex-navbar">
