added desktop and tablet view

--- a/code/index.html
+++ b/code/index.html
@@ -19,25 +19,36 @@
       <div class="menu-line"></div>
     </div>
       <nav>
+        <div class="head1">
        <a class="a-nav" href="#">Inspiration</a>
+      </div>
+      <div class="head2">
        <a class="a-nav" href="#">Articles</a>
+       </div>
+       <div class="head3">
        <a class="a-nav" href="#">Subscribe</a>
+       </div>
+       <div class="head4">
        <a class="a-nav" href="#">About us</a>
+       </div>
       </nav>
     </header>
 
 <div class="wrapper">
     <section class="big-news">
       <img class="big-news-image" src="https://images.unsplash.com/photo-1488646953014-85cb44e25828?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2133&q=80" alt="Travel notes on a map"/>
-      <h2>Travel the world: Big guide</h2>
-      <p>Read more...</p>
+      <div class="text-container">
+        <h2>Travel the world: Big guide</h2>
+      <p class="small-text">Read more...</p>
+      <p class="more-text">Lorem ipsum dolor amet mustache knausgaard +1, blue bottle waistcoat tbh semiotics artisan synth stumptown gastropub cornhole celiac swag. Brunch raclette vexillologist post-ironic glossier ennui XOXO mlkshk godard pour-over blog tumblr humblebrag. Blue bottle put a bird on it twee prism biodiesel brooklyn. Blue bottle ennui tbh succulents.</p>
+    </div>
     </section>
 
     <hr>
 <!--card1-->
     <section class="news-card">
       <img class="news-card-image" src="https://images.unsplash.com/photo-1533105079780-92b9be482077?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1234&q=80" alt="Blue Greece ocean"/>
-      <h3>Greece on a budget</h3>
+      <h3>Discover Greece on a budget</h3>
     </section>
   <!--card2-->
     <section class="news-card">
@@ -52,17 +63,17 @@
   <!--card4-->
     <section class="news-card">
       <img class="news-card-image" src="https://images.unsplash.com/photo-1531219432768-9f540ce91ef3?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2850&q=80" alt="orange van by the ocean"/>
-      <h3>Find the hidden surfspots of Australia</h3>
+      <h3>The hidden surfspots of Australia</h3>
     </section>
   <!--card5-->
     <section class="news-card">
       <img class="news-card-image" src="https://images.unsplash.com/photo-1454430690613-c5fbdb397f65?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1288&q=80" alt="phone taking pictures in paris"/>
-      <h3>5 steps to take better vaccation photos </h3>
+      <h3>5 steps to better vaccation photos </h3>
     </section>
   <!--card6-->
     <section class="news-card">
       <img class="news-card-image" src="https://images.unsplash.com/photo-1494783367193-149034c05e8f?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2850&q=80" alt="Open road in the mountains"/>
-      <h3>Road trip summer! Guide on where to drive</h3>
+      <h3>Road trip summer! A complete guide</h3>
     </section>
     <!--card7-->
     <section class="news-card">
