added articles section

--- a/code/index.html
+++ b/code/index.html
@@ -60,22 +60,18 @@
         <div class="breakfast-club">
           <p>
             We have now a fresh menu for you, starting next week! Each month we
-            will serve you inspiring talks and activities. Wind down with a
-            guided meditation class, or why not become a pro at salary
-            negotiations?
+            will serve you inspiring talks and activities.
           </p>
           <img src="./Pictures/breakfast.jpeg" />
         </div>
       </article>
-      
+
       <article class="breakfast-club-wrapper">
         <h3>Breakfast club</h3>
         <div class="breakfast-club">
           <p>
             We have now a fresh menu for you, starting next week! Each month we
-            will serve you inspiring talks and activities. Wind down with a
-            guided meditation class, or why not become a pro at salary
-            negotiations?
+            will serve you inspiring talks and activities.
           </p>
           <img src="./Pictures/breakfast.jpeg" />
         </div>
