Finished the Tablet version, styled footer links

--- a/code/index.html
+++ b/code/index.html
@@ -144,19 +144,23 @@
   </main>
 
   <footer>
-    <nav class="nav-container navbar">
+    <nav class="footer-container navbar">
       <ul class="navlinks-container list">
-        <li label="nav-links"><a href="#" class="nav-links" alt="Contact us">Contact us</a></li>
-        <li label="nav-links"><a href="#" class="nav-links" alt="Contact us">Contact us</a></li>
-        <li label="nav-links"><a href="#" class="nav-links" alt="Career page">Career page</a></li>
-        <li label="nav-links"><a href="#" class="nav-links" alt="Privacy Policy">Our partners</a></li>
-        <li label="nav-links"><a href="#" class="nav-links" alt="Cookies">More</a></li>
+        <li class="footer-aligning" label="nav-links"><a href="#" class="nav-links" alt="Contact us">Contact Us</a></li>
+        <li class="footer-aligning" label="nav-links"><a href="#" class="nav-links" alt="Contact us">About Us</a></li>
+        <li class="footer-aligning" label="nav-links"><a href="#" class="nav-links" alt="Career page">Career Page</a>
+        </li>
+        <li class="footer-aligning" label="nav-links"><a href="#" class="nav-links" alt="Privacy Policy">Our
+            Partners</a></li>
+        <li class="footer-aligning" label="nav-links"><a href="#" class="nav-links" alt="Cookies">Customer Support</a>
+        </li>
       </ul>
-      <div class="signature-container">
+      <div class="signature-container tablet-styles">
         <p class="signature">Designed and developed by Mary Snopok</p>
       </div>
     </nav>
   </footer>
+
 
   <!-- Changing colors of all svg items on the page. (Going from default black to an ability to change color via CSS.
       Stackoverflow link for clarifications if needed : https://stackoverflow.com/questions/34225008/how-to-reuse-an-embedded-svg-element-in-the-same-page) -->
