Added media queries

--- a/code/index.html
+++ b/code/index.html
@@ -31,7 +31,7 @@
 
     <section class="big-news">
       <section class="big-news-container">
-        <img src="./images/sequins.jpg" alt ="Image of sequins">
+        <img src="s" alt ="Image of sequins">
         
         <h2> WHO ARE WE?</h2>
         
