--- a/code/index.html
+++ b/code/index.html
@@ -9,12 +9,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
-    <link rel="icon" href="images/logo.png"> 
+    <link rel="icon" href="./images/logo.png"> 
   </head>
 
   <body>
     <header>
-      <img src="images/logo.png" alt="Minerva logo">
+      <img src="./images/logo.png" alt="Minerva logo">
       <h1> MINERVA</h1>
       <nav>
         <a href="#">LATEST NEWS</a>
@@ -31,7 +31,7 @@
 
     <section class="big-news">
       <section class="big-news-container">
-        <img src="s" alt ="Image of sequins">
+        <img src="./images/sequins.jpg" alt ="Image of sequins">
         
         <h2> WHO ARE WE?</h2>
         
