navigation added for all devices

--- a/code/index.html
+++ b/code/index.html
@@ -9,6 +9,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;1,500&display=swap" rel="stylesheet">
   </head>
+
   <body>
     <header>
       <img class="logo" src="images/travel-logo.png" alt="Travel logo"/>
@@ -19,18 +20,12 @@
       <div class="menu-line"></div>
     </div>
       <nav>
-        <div class="head1">
-       <a class="a-nav" href="#">Inspiration</a>
-      </div>
-      <div class="head2">
-       <a class="a-nav" href="#">Articles</a>
-       </div>
-       <div class="head3">
-       <a class="a-nav" href="#">Subscribe</a>
-       </div>
-       <div class="head4">
-       <a class="a-nav" href="#">About us</a>
-       </div>
+       <a class="nav1" href="#">Inspiration</a>
+       <a class="nav2" href="#">Articles</a>
+       <img class="logo-big" src="images/travel-logo.png" alt="Travel logo"/>
+       <a class="nav3" href="#">Subscribe</a>
+       <a class="nav4" href="#">About us</a>
+    </nav>
       </nav>
     </header>
 
