--- a/code/index.html
+++ b/code/index.html
@@ -31,20 +31,20 @@
     </header>
     <hr class="thick" />
     <main>
-      <section class="site-big-news section-news">
+      <section id="site-big-news" class="section-news">
         <!-- big news with hero image -->
-        <div class="section-news-wrap">
+        <div class="section-news-wrap big-news-wrap">
           <figure class="site-big-news-figure">
             <div class="site-big-news-image-wrap">
               <img
                 src="https://images.unsplash.com/photo-1578831914933-6339766eb29b?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjV8fGZ1bm55JTIwbWVtZXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
                 alt="man in milk and cereal"
-                class="news-image"
+                class="mobile-news-image hero-image"
               />
               <div class="news-image-ovelay"></div>
             </div>
           </figure>
-          <div class="site-big-news-body">
+          <div class="site-news-body big-news">
             <div class="site-big-news-body-main">
               <h3 class="site-big-news-headline">
                 <a
@@ -69,7 +69,7 @@
               <img
                 src="https://images.unsplash.com/photo-1607798421660-7d2c0bcff934?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mzl8fGZ1bm55JTIwbWVtZXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
                 alt="trump pinata"
-                class="news-image"
+                class="mobile-news-image desktop-news-image"
               />
             </div>
           </figure>
@@ -94,7 +94,7 @@
               <img
                 src="https://images.unsplash.com/photo-1532054241088-402b4150db33?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTZ8fGZ1bm55JTIwbWVtZXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
                 alt="Diet sign"
-                class="news-image"
+                class="mobile-news-image desktop-news-image"
               />
             </div>
           </figure>
@@ -119,7 +119,7 @@
               <img
                 src="https://images.unsplash.com/photo-1601902322950-cb5182a20b34?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTk1fHxmdW5ueXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
                 alt=""
-                class="news-image"
+                class="mobile-news-image desktop-news-image"
               />
             </div>
           </figure>
@@ -144,7 +144,7 @@
               <img
                 src="https://images.unsplash.com/photo-1570288685280-7802a8f8c4fa?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjN8fGZ1bm55JTIwbWVtZXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
                 alt="Monkey with long mustache"
-                class="news-image"
+                class="mobile-news-image desktop-news-image"
               />
             </div>
           </figure>
@@ -170,7 +170,7 @@
               <img
                 src="https://images.unsplash.com/photo-1530497610245-94d3c16cda28?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8bWVtZXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
                 alt="xray okay"
-                class="news-image"
+                class="mobile-news-image desktop-news-image"
               />
             </div>
           </figure>
@@ -195,7 +195,7 @@
               <img
                 src="https://images.unsplash.com/photo-1501673618753-48ce9418287b?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTIwfHxmdW5ueXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
                 alt="lemur smize"
-                class="news-image"
+                class="mobile-news-image desktop-news-image"
               />
             </div>
           </figure>
@@ -220,7 +220,7 @@
               <img
                 src="https://images.unsplash.com/photo-1618975381091-956145bd42b7?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTg0fHxmdW5ueXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
                 alt="80's photoshoot"
-                class="news-image"
+                class="mobile-news-image desktop-news-image"
               />
             </div>
           </figure>
@@ -245,7 +245,7 @@
               <img
                 src="https://images.unsplash.com/photo-1604916851289-390266e08c07?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTM3fHxmdW5ueXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
                 alt="alien and dog"
-                class="news-image"
+                class="mobile-news-image desktop-news-image"
               />
             </div>
           </figure>
@@ -270,7 +270,7 @@
               <img
                 src="https://images.unsplash.com/photo-1589577577513-5ab1cf4cc947?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTU0fHxmdW5ueXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
                 alt="last tissue"
-                class="news-image"
+                class="mobile-news-image desktop-news-image"
               />
             </div>
           </figure>
