added logo, nav text, picture and some text

--- a/code/index.html
+++ b/code/index.html
@@ -7,16 +7,25 @@
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
+    <header></header>
+      <img src="./logo.svg" alt="Technigo" />
+      <nav>
+        <a href="#">Big news</a>
+        <a href="#">Small news</a>
+      </nav>
     </header>
 
     <section class="big-news">
-      <!-- The big news content -->
+      <img src="https://www.fillmurray.com/200/300" alt="Bill Murray" />
+      <p>
+        An ‘extremely credible source’ has called my office and told me that Lorem Ipsum’s birth certificate is a fraud. That other text? Sadly, it’s no longer a 10. Lorem Ipsum is FAKE TEXT!
+      </p>
     </section>
 
     <section class="">
-      <!-- The other news  -->
+      <p>
+        Lorem Ipsum is the single greatest threat
+      </p>
     </section>
   </body>
 </html>
